--- a/templates/game/index.html
+++ b/templates/game/index.html
@@ -26,7 +26,7 @@
 		</style>
 	</head>
 	<body>
-		<a href="/index">
+		<a href="/game/chainReaction">
 		<div class="start-game">
 			start game
 		</div>
