--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html> 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -41,7 +41,7 @@
           <!-- Tab List -->
             <ul class='etabs'>
                 <li class='tab' id="tab-about">
-                  <a href="/"><i class="icon-user"></i><span>首页</span></a>
+                  <a href="index"><i class="icon-user"></i><span>首页</span></a>
                 </li>
                 <li class='tab'>
                   <a href="blog"><i class="icon-file-text"></i><span>博客</span></a>
@@ -52,91 +52,18 @@
                 <li class='tab'>
                   <a href="program"><i class="icon-book"></i><span>项目</span></a>
                 </li>
-                <li class='tab'>
-                  <a href="nav"><i class="icon-glass"></i><span>实事</span></a>
-                </li>
             </ul>
           <!-- End Tab List -->
             <div id="tab-data-wrap">
               <!-- About Tab Data -->
                 <div id="index">
-                    <section class="clearfix">
-                        <div class="g2">
-                            <div class="photo">
-                                <img src="{{ prefix }}{{static_url('images/lufei.jpg')}}" alt="Sunny Luthra">
-                            </div>
-                            <div class="info">
-                                <h2>
-                                    Lucky Spring 
-                                </h2>
-                                <h4>
-                                    Programer / Thinker
-                                </h4>
-                                <p class="ps">
-                                    记录，思考，探索，成长。
-                                </p>
-                            </div>
-                        </div>
-                        <!--
-                        <div class="g1">
-                            <div class="main-links sidebar">
-                                <ul>
-                                    <li>
-                                        <a href="#blog">View My blog</a>
-                                    </li>
-                                    <li>
-                                        <a href="#photo">View My Photo</a>
-                                    </li>
-                                    <li>
-                                        <a href="#my_work">View My Work</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        -->
-                        <div class="break"></div>
-                        <div class="contact-info">
-                          <div class="g1">
-                            <div class="item-box clearfix">
-                              <i class="icon-envelope"></i>
-                              <div class="item-data">
-                                <h3><a href="https://mail.google.com">soluckyspring@gmail.com</a></h3>
-                                <p>Email Address</p>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="g1">
-                            <div class="item-box clearfix">
-                              <i class="icon-github"></i>
-                              <div class="item-data">
-                                <h3><a href="https://github.com/lmqwudi">lmq github</a></h3>
-                                <p>Git hub</p>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="g1">
-                            <div class="item-box clearfix">
-                              <i class="icon-twitter"></i>
-                              <div class="item-data">
-                                <h3><a href="#">283317717</a></h3>
-                                <p>Tencent QQ</p>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                    </section><!-- content -->
                 </div>
 
-                <div class="break"></div>
-                <div class="break"></div>
               <!-- End About Tab Data -->
               <!-- Resume Tab Data -->
                 <div id="blog">
                     <section class="clearfix">
                         <div class="g2">
-                            <h3>
-                                博客 
-                            </h3>
                             <ul class="no-list work">
                                 <li>
                                     <h5>
