--- a/templates/blog/first.html
+++ b/templates/blog/first.html
@@ -41,6 +41,9 @@
                 <li class='tab'>
                   <a href="program"><i class="icon-book"></i><span>项目</span></a>
                 </li>
+                <li class='tab'>
+                  <a href="read"><i class="icon-glass"></i><span>每日必读</span></a>
+                </li>
             </ul>
           <!-- End Tab List -->
             <div id="tab-data-wrap">
