--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                   <a href="program"><i class="icon-book"></i><span>项目</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="nav"><i class="icon-glass"></i><span>实事</span></a>
+                  <a href="read"><i class="icon-glass"></i><span>每日必读</span></a>
                 </li>
             </ul>
           <!-- End Tab List -->
