--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,298 +1,26 @@
-<!DOCTYPE html>
-<html> 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Lucky Spring</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width">
-  <link rel='shortcut icon' type='image/x-icon' href="{{ prefix }}{{ static_url('images/afavicon.ico') }}" />
-  <link rel="apple-touch-icon-precomposed" href="{{ prefix }}{{ static_url('images/apple-touch-icon-precomposed.png') }}" />
-  <link rel="apple-touch-icon-precomposed" href="{{ prefix }}{{ static_url('images/apple-touch-icon-72-precomposed.png') }}" />
-  <link rel="apple-touch-icon-precomposed" href="{{ prefix }}{{ static_url('images/apple-touch-icon-114-precomposed.png') }}">
-  <link rel="apple-touch-icon-precomposed" href="{{ prefix }}{{ static_url('images/apple-touch-icon-144-precomposed.png') }}">
-  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" >
-  <link rel="stylesheet" href=" {{ static_url('css/normalize.min.css') }}">
-  <link rel="stylesheet" href="{{ prefix }}{{ static_url('css/main.css') }}">
-  <script src="{{ prefix }}{{ static_url('js/jquery-1.5.min.js') }}"></script>
-  <script>window.jQuery || document.write('<script src="{{ prefix }}{{ static_url('js/vendor/jquery-1.10.1.min.js') }}"><\/script>')</script>
-  <script src="{{ prefix }}{{ static_url('js/vendor/jquery.hashchange.min.js') }}"></script>
-  <script src="{{ prefix }}{{ static_url('js/vendor/jquery.easytabs.min.js') }}"></script>
+{% extends "../base.html" %}
 
-  <script src="{{ prefix }}{{ static_url('js/main.js') }}"></script>
-</head>
-  <body class="bg-fixed bg-1">
-   <div class="main-container">
-    <div class="main wrapper clearfix">
-      <!-- Header Start -->
-        <header id="header">
-            <div id="logo">
-                <h2>
-                    Lucky Spring 
-                </h2>
-                <h4>
-                    程序员思考人生 
-                </h4>
-            </div>
-        </header>
-        <!-- Header End -->
-        <!-- Main Tab Container -->
-        <div id="tab-container" class="tab-container">
-          <!-- Tab List -->
-            <ul class='etabs'>
-                <li class='tab' id="tab-about">
-                  <a href="index"><i class="icon-user"></i><span>首页</span></a>
-                </li>
-                <li class='tab'>
-                  <a href="blog"><i class="icon-file-text"></i><span>博客</span></a>
-                </li>
-                <li class='tab'>
-                  <a href="photo"><i class="icon-heart"></i><span>照片</span></a>
-                </li>
-                <li class='tab'>
-                  <a href="program"><i class="icon-book"></i><span>项目</span></a>
-                </li>
-                <li class='tab'>
-                  <a href="read"><i class="icon-glass"></i><span>每日必读</span></a>
+{% block middle_body %}
+<div id="blog">
+    <section class="clearfix">
+        <div class="g2" style="width:80%">
+            <h3>
+                博客 
+            </h3>
+            <ul class="no-list work">
+                <li>
+                    <h5>
+                        <a href="/blog/first">开篇</a>
+                    </h5><span class="label label-info">2014-09-12</span>
+                    <p>
+                        懒惰了这么久，终于下定决心写点东西来记录一下自己的学习，生活什么的。
+                        坚持下去才是胜利...
+                    </p>
                 </li>
             </ul>
-          <!-- End Tab List -->
-            <div id="tab-data-wrap">
-              <!-- About Tab Data -->
-                <div id="index">
-                </div>
-
-              <!-- End About Tab Data -->
-              <!-- Resume Tab Data -->
-                <div id="blog">
-                    <section class="clearfix">
-                        <div class="g2">
-                            <ul class="no-list work">
-                                <li>
-                                    <h5>
-                                        <a href="/blog/first">开篇</a>
-                                    </h5><span class="label label-info">2014-09-12</span>
-                                    <p>
-                                        懒惰了这么久，终于下定决心写点东西来记录一下自己的学习，生活什么的。
-                                    坚持下去才是胜利...
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Python Programmer
-                                    </h5><span class="label label-info">2010-2011</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Social Media Lunatic
-                                    </h5><span class="label label-info">2011-2012</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Being Awesome
-                                    </h5><span class="label label-danger">2012-Till Death</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="g1">
-                            <div class="sidebar">
-                                <h3>
-                                    技能 
-                                </h3>
-                                <h5>
-                                    Programming Language
-                                </h5>
-                                <div class="meter emerald">
-                                    <span style="width: 50%"><span>HTML/CSS</span></span>
-                                </div>
-                                <div class="meter carrot">
-                                    <span style="width: 50%"><span>MySql</span></span>
-                                </div>
-                                <div class="meter wisteria">
-                                    <span style="width: 50%"><span>jQuery/JavaScript</span></span>
-                                </div>
-                                <div class="meter sunflower">
-                                    <span style="width: 50%"><span>java</span></span>
-                                </div>
-                                <div class="meter asbestos">
-                                    <span style="width: 50%"><span>Python</span></span>
-                                </div>
-                                <!--
-                                <div class="meter emerald">
-                                    <span style="width: 33.3%"><span>Photoshop</span></span>
-                                </div>
-                                <div class="meter carrot">
-                                    <span style="width: 90%"><span>Illustrator</span></span>
-                                </div>
-                                <div class="meter wisteria">
-                                    <span style="width: 60%"><span>InDesign</span></span>
-                                </div>
-                                <div class="meter sunflower">
-                                    <span style="width: 40%"><span>Firework</span></span>
-                                </div>
-                                <div class="meter midnight">
-                                    <span style="width: 70%"><span>Dreamweaver</span></span>
-                                </div>
-                                <div class="meter pomengrate">
-                                    <span style="width: 60%"><span>Microsoft Office</span></span>
-                                </div>
-                                <div class="meter asbestos">
-                                    <span style="width: 40%"><span>Linux</span></span>
-                                </div>
-                                <div class="break"></div>
-                                <h5>
-                                    Design
-                                </h5>
-                                <div class="meter emerald">
-                                    <span style="width: 33.3%"><span>User Interface</span></span>
-                                </div>
-                                <div class="meter carrot">
-                                    <span style="width: 90%"><span>Typography</span></span>
-                                </div>
-                                <div class="meter wisteria">
-                                    <span style="width: 60%"><span>Web Applications</span></span>
-                                </div>
-                                <div class="break"></div>
-                                -->
-                            </div>
-                        </div>
-                    </section>
-                </div>
-              <!-- End Resume Tab Data -->
-              <!-- Portfolio Tab Data -->
-              <!--
-                <div id="photo">
-                    <section class="clearfix">
-                        <div class="g1">
-                            <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/1" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/1" class="btn">Full View</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="g1">
-                            <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/2" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/2" class="btn">Full View</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="g1">
-                            <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/3" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/3" class="btn">Full View</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="break"></div>
-                        <div class="g1">
-                            <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/4" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/4" class="btn">Full View</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="g1">
-                            <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/5" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/5" class="btn">Full View</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="g1">
-                            <div class="image">
-                                <img src="http://lorempixel.com/306/306/business/2" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/business/2" class="btn">Full View</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        
-                    </section>
-                </div>
-                -->
-              <!-- End Portfolio Data -->
-              <!-- Contact Tab Data -->
-              <!--
-                <div id="program">
-                    <section class="clearfix">
-                       <div class="g1">
-                         <div class="sny-icon-box">
-                           <div class="sny-icon">
-                              <i class="icon-globe"></i>
-                            </div>
-                            <div class="sny-icon-content">
-                              <h4>My Address</h4>
-                              <p>Some Apartment 405 in a jungle nearby a restaurant</p>
-                            </div>
-                         </div>
-                       </div>
-                       <div class="g1">
-                         <div class="sny-icon-box">
-                           <div class="sny-icon">
-                              <i class="icon-phone"></i>
-                            </div>
-                            <div class="sny-icon-content">
-                              <h4>Mobile Number</h4>
-                              <p>999-9999-999<br/>999-1112-999</p>
-                            </div>
-                         </div>
-                       </div>
-                       <div class="g1">
-                         <div class="sny-icon-box">
-                           <div class="sny-icon">
-                              <i class="icon-user"></i>
-                            </div>
-                            <div class="sny-icon-content">
-                              <h4>About Me</h4>
-                              <p>I love to work, so don't be shy, i am just an email away.</p>
-                            </div>
-                         </div>
-                       </div>
-                       <div class="break"></div>
-                       
-                    </section>
-                </div>
-                -->
-              <!-- End Contact Data -->
-            </div>
         </div>
-        <!-- End Tab Container -->
-        <footer>
-            <p>
-                copyright@soluckyspring 2014
-            </p>
-        </footer>
-    </div><!-- #main -->
-</div><!-- #main-container -->
-
-
-
-</body>
-</html>
+       </div>
+    </section>
+</div>
+    
+{% end %}
