--- a/templates/read/index.html
+++ b/templates/read/index.html
@@ -1,7 +1,33 @@
 {% extends "../base.html" %}
 
 {% block middle_body %}
-This is my template demo!
+<div id="read">
+    <section class="clearfix">
+        <div class=g2i style="width:100%">
+            <h3>
+                关注每日事实，关心技术革新
+            </h3>
+            <div class="break"></div>
+            <h4>产品网站：</h4>
+            <h5><a href="http://www.huxiu.com/">虎嗅</a></h5>
+            <h5><a href="http://www.36kr.com/">36kr</a></h5>
+            <h5><a href="http://www.geekpark.net/">极客公园</a></h5>
+            <h5><a href="http://www.cyzone.cn/">创业邦</a></h5>
+            <h5><a href="http://www.woshipm.com/">人人都是产品经理</a></h5>
+            <h5><a href="http://www.tmtpost.com/">钛媒体</a></h5>
+            <h5><a href="http://www.yixieshi.com/">互联网的一些事</a></h5>
+            <h5><a href="http://www.iimedia.cn/">艾媒网</a></h5>
+        <div class="break"></div>
+        <div class="break"></div>
+            <h4>技术网站：</h4>
+            <h5><a href="https://github.com/">github</a> </h5>
+            <h5><a href="http://www.ituring.com.cn/minibook">图灵社区</a> </h5>
+            <h5><a href="http://stackoverflow.com/">stackoverflow</a> </h5>
+            <h5><a href="http://www.infoq.com/cn/">infoQ</a> </h5>
+        </div>
+    </section>
+</div>        
+
 {% end %}
 
 
