--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -17,6 +17,14 @@
                         坚持下去才是胜利...
                     </p>
                 </li>
+                <li>
+                    <h5>
+                        <a href="/blog/al_1">算法1</a>
+                    </h5><span class="label label-info">2014-09-12</span>
+                    <p>
+                        算法开篇
+                    </p>
+                </li>
             </ul>
        </div>
     </section>
