--- a/templates/index.html
+++ b/templates/index.html
@@ -13,13 +13,13 @@
         </h2>
 
         <div class="blogs">
-            <h3><a href="/blog/first">开篇</a></h3>
+            <h3><a href="/blog/01">开篇</a></h3>
             <figure>
-                <img src="{{ prefix }}{{ static_url('images/01.jpg') }}" >
+                <img src="{{ prefix }}{{ static_url('images/02.jpg') }}" >
             </figure>
             <p>懒惰了这么久，终于下定决心写点东西来记录一下自己的学习，生活什么的。 坚持下去才是胜利...</p>
             <ul>
-                <a href="/" target="_blank" class="readmore">阅读全文&gt;&gt;</a>
+                <a href="/blog/01" target="_blank" class="readmore">阅读全文&gt;&gt;</a>
             </ul>
             <p class="autor">
                 <span>作者：spring</span>
@@ -29,15 +29,16 @@
         </div>
 
         <div class="blogs">
-            <h3><a href="/blog/first">排序算法</a></h3>
-            <figure><img src="images/01.jpg" ></figure>
-            <p>懒惰了这么久，终于下定决心写点东西来记录一下自己的学习，生活什么的。 坚持下去才是胜利...</p>
+            <h3><a href="/blog/02">排序算法</a></h3>
+            <figure>
+            <img src="{{ prefix }}{{ static_url('images/02.jpg') }}i"></figure>
+            <p>自从工作之后，俨然成了一个coder，机械的完成上面的任务，突然发现这tm是什么乱七八糟的 生活，本来基础就差，现在还变成这个状态。养成写博客的习惯，一方面不断提高自己，另一方面 不断提醒自己。 </p>
             <ul>
-                <a href="/" target="_blank" class="readmore">阅读全文&gt;&gt;</a>
+                <a href="/blog/02" target="_blank" class="readmore">阅读全文&gt;&gt;</a>
             </ul>
             <p class="autor">
                 <span>作者：spring</span>
-                <span>分类：生活日记</span><span>
+                <span>分类：编程笔记</span><span>
             </p>
             <div class="dateview">2014-09-28</div>
         </div>
