--- a/templates/base.html
+++ b/templates/base.html
@@ -18,20 +18,20 @@
     <header>
         <h1>雨润无声</h1>
         <h2>关于生活，关于工作，关于我，无声无息...</h2>
-        <div class="logo"><a href="index.html"></a></div>
+        <div class="logo"><a href="/index"></a></div>
         <nav id="topnav">
-            <a href="index.html">首页</a>
-            <a href="about.html">关于我</a>
-            <a href="newlist.html">慢生活</a>
-            <a href="share.html">模板分享</a>
-            <a href="new.html">模板主题</a>
+            <a href="/index">首页</a>
+            <a href="/about">关于我</a>
+            <a href="/newlist">慢生活</a>
+            <a href="/share">模板分享</a>
+            <a href="/new">模板主题</a>
             </nav>
     </header>
     {% block middle_body %}
     {% end %}
 
     <aside>
-    <div class="avatar"><a href="about.html"><span>关于博主</span></a></div>
+    <div class="avatar"><a href="/about"><span>关于博主</span></a></div>
     <div class="topspaceinfo">
       <h1>生活与学习，工作与成长</h1>
       <p>选择了就无怨无悔，坚持下去才能得到绽放....</p>
@@ -47,27 +47,22 @@
         <p class="tj_t1">最新文章</p>
       </h2>
       <ul>
-        <li><a href="/">犯错了怎么办？</a></li>
-        <li><a href="/">两只蜗牛艰难又浪漫的一吻</a></li>
-        <li><a href="/">春暖花开-走走停停-发现美</a></li>
-        <li><a href="/">琰智国际-Nativ for Life官方网站</a></li>
-        <li><a href="/">个人博客模板（2014草根寻梦）</a></li>
-        <li><a href="/">简单手工纸玫瑰</a></li>
-        <li><a href="/">响应式个人博客模板（蓝色清新）</a></li>
-        <li><a href="/">蓝色政府（卫生计划生育局）网站</a></li>
+        <li><a href="/blog/01">开篇</li>
+        <li><a href="/blog/02">排序算法</a></li>
+        <li><a href="/blog/02">排序算法</a></li>
+        <li><a href="/blog/02">排序算法</a></li>
+        <li><a href="/blog/02">排序算法</a></li>
+        <li><a href="/blog/02">排序算法</a></li>
       </ul>
       <h2>
         <p class="tj_t2">推荐文章</p>
       </h2>
       <ul>
-        <li><a href="/">犯错了怎么办？</a></li>
-        <li><a href="/">两只蜗牛艰难又浪漫的一吻</a></li>
-        <li><a href="/">春暖花开-走走停停-发现美</a></li>
-        <li><a href="/">琰智国际-Nativ for Life官方网站</a></li>
-        <li><a href="/">个人博客模板（2014草根寻梦）</a></li>
-        <li><a href="/">简单手工纸玫瑰</a></li>
-        <li><a href="/">响应式个人博客模板（蓝色清新）</a></li>
-        <li><a href="/">蓝色政府（卫生计划生育局）网站</a></li>
+        <li><a href="/blog/01">开篇</li>
+        <li><a href="/blog/02">排序算法</a></li>
+        <li><a href="/blog/02">排序算法</a></li>
+        <li><a href="/blog/02">排序算法</a></li>
+        <li><a href="/blog/02">排序算法</a></li>
       </ul>
     </div>
     <div class="links">
@@ -75,8 +70,8 @@
         <p>友情链接</p>
       </h2>
       <ul>
-        <li><a href="/">杨青个人博客</a></li>
-        <li><a href="/">3DST技术社区</a></li>
+        <li><a href="/index">个人博客</a></li>
+        <li><a href="http://coolshell.cn/">酷壳</a></li>
       </ul>
     </div>
     <div class="copyright">
