--- a/templates/base.html
+++ b/templates/base.html
@@ -22,9 +22,8 @@
         <nav id="topnav">
             <a href="/index">首页</a>
             <a href="/about">关于我</a>
-            <a href="/newlist">慢生活</a>
-            <a href="/share">模板分享</a>
-            <a href="/new">模板主题</a>
+            <a href="/life">慢生活</a>
+            <a href="/read">阅读时间</a>
             </nav>
     </header>
     {% block middle_body %}
